--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
     .message-form__button:hover {
       background-color: #45a049;
     }
+
+    .note {
+      text-align: center;
+      font-size: 14px;
+      color: red;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -117,6 +124,7 @@
       <input class="message-form__file" type="file" accept="image/*">
       <input class="message-form__button" value="Send" type="submit">
     </form>
+    <div class="note">When adding images, only the option named "Choose File" will work.</div>
   </div>
   <script src="./script.js"></script>
 </body>
