--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <input class="message-form__file" type="file" accept="image/*">
       <input class="message-form__button" value="Send" type="submit">
     </form>
-    <div class="note">When adding images, only the option named "Choose File" will work after clicking the original Choose File. ***TO GET IMAGES FROM YOUR CAMERA ROLL→press share then scroll to save to files. Now when you click Chose File go and find the image. It should be in your iCloud Drive location.</div>
+    <div class="note">When adding images, only the option named "Choose File" will work after clicking the original Choose File. ***TO GET IMAGES FROM YOUR CAMERA ROLL→press share then scroll to save to files. Now when you click Choose File go and find the image. It should be in your iCloud Drive location.</div>
   </div>
   <script src="./script.js"></script>
 </body>
