--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Education Chat for Kids</title>
+  <title>Education Chat 18+ Only *Not During School*</title>
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <style>
     body {
@@ -115,7 +115,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="header">Education Chat for Kids</div>
+    <div class="header">Education Chat 18+ Only *Not During School* NO INAPPROPRIATE OR OFFENSIVE CONTENT </div>
     <div class="members-count">0 members online</div>
     <div class="members-list">No members yet</div>
     <div class="messages"></div>
