--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="header">Education Chat Do Not Use During School NO INAPPROPRIATE OR OFFENSIVE CONTENT </div>
+    <div class="header">Education Chat</div>
+    <div class="header">NO INAPPROPRIATE OR OFFENSIVE CONTENT</div>
     <div class="members-count">0 members online</div>
     <div class="members-list">No members yet</div>
     <div class="messages"></div>
